Add header navbar

--- a/index.html
+++ b/index.html
@@ -17,6 +17,25 @@
   <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body>
+  <header class="sticky-top bg-dark">
+    <div class="container-md">
+        <nav class="navbar navbar-expand-md navbar-dark">
+            <a href="./index.html" class="navbar-brand">
+                <i class="bi bi-info-square-fill"></i>
+                <span>InfoTech</span>
+            </a>
+            <button class="navbar-toggler" type="button" data-bs-target="#toggleHam" data-bs-toggle="collapse" aria-controls="toggleHam" aria-expanded="false">
+                <span class="navbar-toggler-icon"></span>
+                <span class="visually-hidden">Toggle Menu</span>
+            </button>
+            <div class="collapse navbar-collapse" id="toggleHam">
+                <ul class="navbar-nav ms-auto text-uppercase">
+                    <li><a class="nav-link text-light" aria-current="page" href="./index.html">Personal Library</a></li>
+                </ul>
+            </div>
+        </nav>
+    </div>
+</header>
   <!-- noscript -->
   <noscript>Please enable Javascript, some features may not be available!</noscript>
   <!-- boostrap 5 js -->
