Fix comments & identation

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <p class="h2 text-center pb-5">Let's get started. Add a book!</p>
     <!-- booklist container -->
     <div id="bookList" class="d-flex flex-wrap">
-      <!-- Add Book Form -->
+      <!-- add book form -->
       <div id="addBookCard" class="card card-book overflow-hidden">
         <form class="row">
           <!-- Title -->
@@ -87,8 +87,7 @@
   <!-- noscript -->
   <noscript>Please enable Javascript, some features may not be available!</noscript>
   <!-- boostrap 5 js -->
-<!-- JavaScript Bundle with Popper -->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
   <!-- custom js -->
   <script type="module" src="./assets/javascript/main.js"></script>
 </body>
