Update book modal id

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
     <!-- empty list message -->
     <p class="h2 text-center pb-5">Let's get started. Add a book!</p>
     <!-- modal add book -->
-    <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+    <div class="modal fade" id="bookModal" tabindex="-1" role="dialog" aria-labelledby="bookModalTitle" aria-hidden="true">
       <div class="modal-dialog modal-dialog-centered" role="document">
         <div class="modal-content">
           <div class="modal-header">
@@ -128,7 +128,7 @@
     <div id="display" class="d-flex flex-wrap">
       <!-- show modal btn -->
       <div id="showModalCard" class="d-flex justify-content-center card">
-        <button id="showModalBtn" class="btn" data-bs-toggle="modal" data-bs-target="#exampleModalCenter">
+        <button id="showModalBtn" class="btn" data-bs-toggle="modal" data-bs-target="#bookModal">
           <p class="fs-2">
             Create New
             <i class="bi bi-plus-lg"></i>
