Update empty book list notif + style

--- a/index.html
+++ b/index.html
@@ -122,8 +122,6 @@
         </div>
       </div>
     </div>
-    <!-- empty book list notification -->
-    <p class="h2 text-center pb-5">Let's get started. Add a book!</p>
     <!-- book list container -->
     <div id="book-list" class="d-flex flex-wrap">
       <!-- activate modal: add book -->
@@ -134,6 +132,11 @@
             <i class="bi bi-plus-lg"></i>
           </p>
         </button>
+      </div>
+      <!-- empty book list notification -->
+      <div class="d-flex flex-column justify-content-center card-list-empty">
+        <p class="h3 text-center pb-5">Your list is empty!</p>
+        <p class="h3 text-center pb-5">Select the button to add a book</p>
       </div>
     </div>
   </div>
