--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
       </div>
       <!-- empty book list notification -->
       <div class="d-flex flex-column justify-content-center card-list-empty">
-        <p class="h3 text-center pb-5">Your list is empty!</p>
+        <p class="h3 text-center pb-5">Your list is empty</p>
         <p class="h3 text-center pb-5">Select the button to add a book</p>
       </div>
     </div>
